syntax = "proto3";
//option java_multiple_files = true;
package com.lampart.microservice1.grpc;
option java_package = "com.lampart.microservice1.grpc";

message CompanyRequest {
	int32 id = 1;
}

message CompanyResponse {
    int32 id = 1;
    string name = 2;
}

service CompanyService {
    rpc getCompany(CompanyRequest) returns (CompanyResponse);
}
